buttons layout set with grid

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 <body>
     <div class="container">
         <div id="card"></div>
-        <div class="buttons">
-            <button id="prev">&lt; &lt; &lt; Prev</button>
-            <button id="next">Next &gt; &gt; &gt;</button>
-        </div>
+        <button id="prev">&lt;- Prev</button>
+        <button id="next">Next -&gt;</button>
     </div>
     
 </body>
