get by id and post request works

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/script.js" defer></script>
     <link rel="stylesheet" href="/style.css">
     <title>Flashcards!</title>
 </head>
@@ -14,6 +13,6 @@
         <button id="prev">&lt;- Prev</button>
         <button id="next">Next -&gt;</button>
     </div>
-    
+    <script src="/script.js"></script>
 </body>
 </html>
